@@ -1729,6 +1729,9 @@ cl_symbols[] = {
 {CLOS_ "STANDARD-READER-METHOD",NULL},
 {CLOS_ "STANDARD-SLOT-DEFINITION",NULL},
 {CLOS_ "STANDARD-WRITER-METHOD",NULL},
+{CLOS_ "STD-COMPUTE-APPLICABLE-METHODS",NULL},
+{CLOS_ "STD-COMPUTE-APPLICABLE-METHODS-USING-CLASSES",NULL},
+{CLOS_ "STD-COMPUTE-EFFECTIVE-METHOD",NULL},
 {CLOS_ "UPDATE-DEPENDENT",NULL},
 {CLOS_ "VALIDATE-SUPERCLASS",NULL},
 {CLOS_ "WRITER-METHOD-CLASS",NULL},
